--- a/influencer.css
+++ b/influencer.css
@@ -5,6 +5,9 @@ common styles
 
 }
 
+body{
+    margin: 0px;
+}
 .main-container{
     padding: 90px 120px;
     background-color: #ffffff;
@@ -53,16 +56,16 @@ nav>ul {
     display: flex;
     gap: 50px;
     align-items: center;
-    margin: auto;
+    
 }
 
 .banner-title {
     color: #3A3A3A;
     font-family: Poppins;
     font-size: 4.25rem;
-    font-style: normal;
+    
     font-weight: 700;
-    line-height: 70px;
+
     /* 134.615% */
 }
 
@@ -110,7 +113,7 @@ nav>ul {
     font-size: 1.75rem;
     font-style: normal;
     font-weight: 600;
-    line-height: 70px;
+ 
     /* 250% */
     ;
 }
@@ -137,8 +140,7 @@ nav>ul {
     font-size: 1.75rem;
     font-style: normal;
     font-weight: 500;
-    line-height: 40px;
-    /* 142.857% */
+   
 }
 
 .item-price {
@@ -197,8 +199,75 @@ line-height: normal;
 .copyright{
     color: var(--text-gray-300, #D9DBE1);
 font-family: Manrope;
-font-size: 1.9rem;
+font-size: 0.9rem;
 font-style: normal;
 font-weight: 700;
 line-height: 24px; /* 171.429% */
 }
+.font-awesome img{
+    gap: 100px;
+
+}
+
+@media screen and (max-width:576px) {
+    
+nav{
+    flex-direction: column;
+    text-align: center;
+    font-size: 16px;
+    margin-bottom: 25px;
+}
+   nav ul{
+    justify-content: center;
+    
+   }
+        
+
+   .banner-container{
+    padding: 15px auto;
+    flex-direction: column-reverse;
+   }
+   .banner-title{
+    color: #3A3A3A;
+text-align: center;
+font-family: Poppins;
+font-size: 28px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+   }
+   .banner-text{
+    text-align: center;
+    width: 100%;
+}
+.main-container{
+    margin: 10px 8px ;
+    padding: 5px 10px;
+}
+.e-commerce{
+display: grid;
+gap: 10px;
+grid-template-columns: repeat(4,1fr);
+margin-bottom: ;
+}
+.cards{
+    grid-template-columns: repeat(1, 1fr);
+}
+.card img{
+    width: 100%;
+}
+
+.see-more{
+    text-align: center;
+}
+.Featured-container{
+    margin: auto;
+    flex-direction: column-reverse;
+    text-align: center;
+    padding-bottom: 15px;
+}
+footer{
+    margin: 0px;
+}
+}
+
