--- a/influencer.css
+++ b/influencer.css
@@ -226,6 +226,8 @@ nav{
    .banner-container{
     padding: 15px auto;
     flex-direction: column-reverse;
+    width: 80%;
+    justify-content: center;
    }
    .banner-title{
     color: #3A3A3A;
@@ -247,11 +249,15 @@ line-height: normal;
 .e-commerce{
 display: grid;
 gap: 10px;
-grid-template-columns: repeat(4,1fr);
-margin-bottom: ;
+grid-template-columns: repeat(3,1fr);
+
 }
 .cards{
     grid-template-columns: repeat(1, 1fr);
+    justify-items: center;
+}
+.card{
+    text-align: start;
 }
 .card img{
     width: 100%;
